test/type/fail/return_void.j
class A{
  Void main() {
    return 5;
  }
}
